[gd_scene load_steps=47 format=2]

[ext_resource path="res://Assets/Menu/logo_final.png" type="Texture" id=1]
[ext_resource path="res://Assets/Menu/credits_normal_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/credits_normal_2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu/exit_normal_1.png" type="Texture" id=4]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Assets/Menu/highscore_normal_0.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menu/new_game_hover_2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menu/new_game_normal_0.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu/new_game_hover_0.png" type="Texture" id=9]
[ext_resource path="res://Assets/Menu/new_game_normal_2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Menu/new_game_normal_1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Menu/highscore_normal_2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Menu/highscore_normal_1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Menu/credits_normal_0.png" type="Texture" id=14]
[ext_resource path="res://Assets/Menu/exit_normal_2.png" type="Texture" id=15]
[ext_resource path="res://Assets/Menu/exit_normal_0.png" type="Texture" id=16]
[ext_resource path="res://Assets/Menu/new_game_hover_1.png" type="Texture" id=17]
[ext_resource path="res://Assets/Menu/new_game_click_0.png" type="Texture" id=18]
[ext_resource path="res://Assets/Menu/highscore_hover_1.png" type="Texture" id=19]
[ext_resource path="res://Assets/Menu/highscore_hover_2.png" type="Texture" id=20]
[ext_resource path="res://Assets/Menu/highscore_hover_0.png" type="Texture" id=21]
[ext_resource path="res://Assets/Menu/highscore_cliked.png" type="Texture" id=22]
[ext_resource path="res://Assets/Menu/credits_hover_2.png" type="Texture" id=23]
[ext_resource path="res://Assets/Menu/credits_hover_0.png" type="Texture" id=24]
[ext_resource path="res://Assets/Menu/credits_cliked.png" type="Texture" id=25]
[ext_resource path="res://Assets/Menu/credits_hover_1.png" type="Texture" id=26]
[ext_resource path="res://Assets/Menu/exit_hover_0.png" type="Texture" id=27]
[ext_resource path="res://Assets/Menu/exit_clicked.png" type="Texture" id=28]
[ext_resource path="res://Assets/Menu/exit_hover_2.png" type="Texture" id=29]
[ext_resource path="res://Assets/Menu/exit_hover_1.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sounds/3-3_quiet_intro.wav" type="AudioStream" id=31]
[ext_resource path="res://Assets/Sounds/3-3_quiet.wav" type="AudioStream" id=32]
[ext_resource path="res://Assets/Menu/splashscreen_spielwerker.png" type="Texture" id=33]
[ext_resource path="res://Assets/Menu/splashscreen_technical.png" type="Texture" id=34]
[ext_resource path="res://Assets/Menu/splashscreen_credits.png" type="Texture" id=35]
[ext_resource path="res://Assets/Menu/back_button.png" type="Texture" id=36]
[ext_resource path="res://Assets/Menu/back_button_1.png" type="Texture" id=37]
[ext_resource path="res://Assets/Menu/back_button-2.png" type="Texture" id=38]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 3
fps = 8.0
frame_0/texture = ExtResource( 8 )
frame_1/texture = ExtResource( 11 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 10 )
frame_2/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=2]
flags = 4
frames = 3
fps = 8.0
frame_0/texture = ExtResource( 9 )
frame_1/texture = ExtResource( 17 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 7 )
frame_2/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=3]
flags = 4
frames = 3
fps = 8.0
frame_0/texture = ExtResource( 6 )
frame_1/texture = ExtResource( 13 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 12 )
frame_2/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=4]
flags = 4
frames = 3
fps = 8.0
frame_0/texture = ExtResource( 21 )
frame_1/texture = ExtResource( 19 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 20 )
frame_2/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=5]
flags = 4
frames = 3
fps = 8.0
frame_0/texture = ExtResource( 14 )
frame_1/texture = ExtResource( 2 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 3 )
frame_2/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=6]
flags = 4
frames = 3
fps = 8.0
frame_0/texture = ExtResource( 24 )
frame_1/texture = ExtResource( 26 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 23 )
frame_2/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=7]
flags = 4
frames = 3
fps = 8.0
frame_0/texture = ExtResource( 16 )
frame_1/texture = ExtResource( 4 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 15 )
frame_2/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=8]
flags = 4
frames = 3
fps = 8.0
frame_0/texture = ExtResource( 27 )
frame_1/texture = ExtResource( 30 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 29 )
frame_2/delay_sec = 0.0

[node name="Control" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.411765, 0.247059, 0.184314, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginBox" type="MarginContainer" parent="."]
margin_left = 100.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 100.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer"]
margin_right = 645.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="TextureRect" parent="HBoxContainer/CenterContainer2"]
margin_top = 128.0
margin_right = 645.0
margin_bottom = 851.0
size_flags_horizontal = 3
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 649.0
margin_right = 1770.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CenterContainer"]
margin_left = 160.0
margin_top = 84.0
margin_right = 960.0
margin_bottom = 896.0

[node name="TextureButton_NewGame" type="TextureButton" parent="HBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 800.0
margin_bottom = 200.0
texture_normal = SubResource( 1 )
texture_pressed = ExtResource( 18 )
texture_hover = SubResource( 2 )

[node name="TextureButton_Scores" type="TextureButton" parent="HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 800.0
margin_bottom = 404.0
texture_normal = SubResource( 3 )
texture_pressed = ExtResource( 22 )
texture_hover = SubResource( 4 )
texture_disabled = ExtResource( 22 )

[node name="TextureButton_Credits" type="TextureButton" parent="HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 408.0
margin_right = 800.0
margin_bottom = 608.0
texture_normal = SubResource( 5 )
texture_pressed = ExtResource( 25 )
texture_hover = SubResource( 6 )

[node name="TextureButton_Exit" type="TextureButton" parent="HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 612.0
margin_right = 800.0
margin_bottom = 812.0
texture_normal = SubResource( 7 )
texture_pressed = ExtResource( 28 )
texture_hover = SubResource( 8 )

[node name="Sound" type="Node" parent="."]

[node name="AudioStreamPlayer_Intro" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 31 )
autoplay = true

[node name="AudioStreamPlayer_Full" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 32 )

[node name="TeamMembers" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1480.0
margin_bottom = -1040.0
texture = ExtResource( 35 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton_CreditsBack" type="TextureButton" parent="TeamMembers"]
anchor_left = 0.841
anchor_top = 0.897
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 38 )
texture_hover = ExtResource( 36 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Splashscreens" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spielwerker" type="CenterContainer" parent="Splashscreens"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect_Studio" type="TextureRect" parent="Splashscreens/Spielwerker"]
margin_left = 627.0
margin_top = 334.0
margin_right = 1293.0
margin_bottom = 746.0
texture = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamMembers2" type="TextureRect" parent="Splashscreens"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 35 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreSplashScreen" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 34 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="pressed" from="HBoxContainer/CenterContainer/VBoxContainer/TextureButton_NewGame" to="." method="_on_TextureButton_NewGame_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainer/VBoxContainer/TextureButton_Credits" to="." method="_on_TextureButton_Credits_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainer/VBoxContainer/TextureButton_Exit" to="." method="_on_TextureButton_Exit_pressed"]
[connection signal="finished" from="Sound/AudioStreamPlayer_Intro" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="finished" from="Sound/AudioStreamPlayer_Full" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="pressed" from="TeamMembers/TextureButton_CreditsBack" to="." method="_on_TextureButton_CreditsBack_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
